fix logo on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ body {
   position: relative;
 
   min-height: 100vh;
+  min-height: -webkit-fill-available;
 
   @media (min-width: 800px) {
     align-items: center;
